--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
       <div class="content position-absolute w-100 top-0 pt-5">
         <div class="cta">
           <div id="hello" class="typewriter pb-3">
-            w3Fabric.com - Connection internet haute vitesse a 1$/jour
+            w3Fabric.com
+          </div>
+          <div id="hello" class="typewriter pb-2">
+            Connection internet haute vitesse a 1$/jour
           </div>
           <a class="btn btn-primary mb-5" href="//app.cyclic.sh/api/login">Connection</a>
         </div>
