--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <div class="cta">
           <div id="hello" class="typewriter pb-3">
             w3Fabric.com
-          </div>
+          </div><br>
           <div id="hello" class="typewriter pb-2">
             Connection internet haute vitesse a 1$/jour
           </div>
