--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
           <div id="hello" class="typewriter pb-2">
             Connection internet haute vitesse a 1$/jour
           </div><br>
-          <a class="btn btn-primary mb-5" href="//app.cyclic.sh/api/login">Connection</a>
+          <!--//app.cyclic.sh/api/login-->
+          <a class="btn btn-primary mb-5" href="#">Connection</a>
         </div>
         <div id="world">
           <canvas id='rotatingGlobe' style='cursor: move;'></canvas>
